# typechecker-experiments

./: .gitignore  CHANGELOG.md  LICENSE  hie.yaml  typechecker.cabal
app/: Main.hs
src/: Core.hs  Expr.hs  Interpreter.hs  Lexer.x  Parser.y  Typecheck.hs  UnionFind.hs
test/: Test.hs
